media/css/zamboni/developers.css
/* ... */
/* @end */

/* @group Header and main navigation bar */
.section {
    max-width: 75em;
}

.developer-hub #content-main,
.developer-hub #dashboard {
    min-height: 30em;
}

#navbar a, #navbar a:active, #navbar a:hover, #navbar a:focus, #navbar a:visited {
    color: white;
    text-decoration: none;
    cursor: pointer;
}
#navbar {
    display: block;
    background-image: url(../../img/amo2009/bg/heading-dark-blue.jpg);
    background-repeat: repeat-x;
    background-position: bottom left;
    background-color: #305083;
    border:  1px solid #021437;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    margin: 0 0 1.5em 0;
    color: white;
    font-size: 1.231em;
    white-space: nowrap;
    overflow: hidden;
}
#navbar ul.top {
    overflow: visible;
}
#navbar li.top {
    float: left;
    border-right: 1px solid #455c87;
    list-style: none;
}
#navbar li.top a.controller {
    display: block;
    padding: .5em 1.3em;
    margin: 0;
}
#navbar li.top a.controller {
    border-right: 1px solid #1e2e4c;
}
#navbar li.top:hover,
#navbar li.top.selected {
    background-image: url(../../img/amo2009/bg/heading-dark-blue-highlighted.png);
}
#navbar li.top ul {
    display: none;
    position: absolute;
    z-index: 1;
    top: auto;
    margin-left: -1px;
}
#navbar li.top ul,
#navbar li.top ul li:last-child {
    -moz-border-radius-bottomleft: 8px;
    -webkit-border-bottom-left-radius: 8px;
    border-bottom-left-radius: 8px;
    -moz-border-radius-bottomright: 8px;
    -webkit-border-bottom-right-radius: 8px;
    border-bottom-right-radius: 8px;
}
#navbar li.top:hover ul {
    display: block;
}
#navbar li ul li {
    background-image: url(../../img/amo2009/bg/heading-dark-blue-highlighted.png);
    background-repeat: repeat-x;
    background-position: bottom left;
    background-color: #305083;
    border-bottom: 1px solid #5a7297;
}
#navbar li ul li:hover {
    background-image: url(../../img/amo2009/bg/heading-dark-blue.jpg);
}
#navbar li ul li a {
    display: block;
    padding: .5em 1.3em;
    border-bottom: 1px solid #3f4f6a;
}
#navbar li.top ul li:last-child,
#navbar li.top ul li:last-child a {
    border: none;
}
/* @end */

/* @group Buttons */
.add-button,
.remove-button,
.edit-button,
.action-button {
    background: #fefefe url(../../img/developers/add.png) no-repeat 10px 50%;
    border: 1px solid #ccc;
    -moz-border-radius: 13px;
    -webkit-border-radius: 8px;
    border-radius: 10px;
    padding: 3px 15px 3px 35px;
    white-space: nowrap;
}
.remove-button {
    /* TODO: Combine all these icons into a sprite. */
    background-image: url(../../img/developers/delete.png);
}
.edit-button {
    background-image: url(../../img/developers/edit.png);
}
.html-rtl .add-button,
.html-rtl .remove-button,
.html-rtl .edit-button,
.html-rtl .action-button {
    background-position: 95% 50%;
    padding: 3px 35px 3px 15px;
}
.undo {
    float: right;
}
/* @end */

/* @group Add-on Submission */
#agreement-container {
    margin: 0 0 10px 0;
    padding: 15px;
    max-height: 300px;
    overflow: auto;
    background-color: #fff;
    border: 1px solid #6a89b0;
}
ol.submit-addon-progress {
    color: #94969a;
}
ol.submit-addon-progress li.current,
ol.submit-addon-progress li.current a {
    color: #565656;
    font-weight: bold;
}
#agreement-extra-links {
    text-align: right;
    margin-bottom: 2em;
    font-size: 90%;
}
#agreement-extra-links span {
    padding: 0 0.5em;
}
.submit-buttons,
#agreement-buttons,
.addon-submission-process .submission-buttons{
    border-top: 1px dotted #A4CFDE;
    margin-bottom: 0;
    padding-top: 0.8em;
}
.addon-submission-process h3:nth-of-type(1) {
    margin-top: 0.75em;
}
div.done-next-steps p {
    margin-bottom: 0.3em;
}
div.done-next-steps ul,
.review-type ul {
    list-style: inside disc;
}
div.done-next-steps ul li {
    margin-bottom: 0.3em;
}
#submitted-addon-url {
    font-size: 1.3em;
    padding-left: 5em;
}

/* @group Select a Review Process */

form.select-review .errorlist {
    margin-bottom: 1.5em;
}

.review-type {
    float: left;
    width: 50%;
}
.review-type .highlight {
    background-color: #fff;
    border: 1px solid #c8e8f3;
    margin-right: 0.5em;
}
.review-type + .review-type .highlight {
    margin: 0 0 0 0.5em;
}

.review-type h4 {
    color: #666;
    font-size: 16px;
    margin: 0;
}
.review-type p,
.review-type ul {
    margin-top: 0.5em;
}
.review-type ul {
    min-height: 8em;
}

/* @end */

/* @end */

/** Invisible file inputs */
.invisible-upload {
    position: relative;
    display: inline-block;
    overflow: hidden;
    cursor: pointer;
}

.invisible-upload input {
    display: block;
    position: absolute;
    right: 0;
    bottom: 0;
    width: auto;
    height: 100%;
    opacity: 0;
    cursor: pointer;
    z-index: 1;
    outline: none;
}

.invisible-upload:hover input {
    font-size: 1000px;
}

.invisible-upload a.button {
    position: relative;
    display: inline-block;
}

.invisible-upload:hover a.button,
.invisible-upload.focused a.button {
    border-color: #25f;
    -moz-box-shadow: inset 0 0 2px #fff;
    -webkit-box-shadow: inset 0 0 2px #fff;
    box-shadow: inset 0 0 2px #fff;

}

.invisible-upload a.link {
    text-decoration: none;
    color: #0055EE;
}

.invisible-upload:hover a.link,
.invisible-upload.focused a.link {
    text-decoration: underline;
}
/* @end */

#upload-file li {
    float: left;
    margin-right: 8px;
}
#upload-file ul {
    overflow: hidden;
    margin-bottom: 1em;
}

#file-list { margin-bottom: 1em;}
#file-list tr {
    border-bottom: 1px dotted #ADD0DC;
}

.devhub-form .compat-versions tbody {
    border: 0;
}

.devhub-form .compat-versions p.add-app {
    margin-top: 1em;
}

/* @group Add-on validator suite */
#addon-validator-suite {
    width: 56em;
    color: #929292;
}
/* ... */

