Bug 618534, preventing squished version file selects

--- a/media/css/zamboni/developers.css
+++ b/media/css/zamboni/developers.css
@@ -1345,6 +1345,9 @@ form.select-review .errorlist {
     margin-bottom: 1em;
 }
 
+#file-list select {
+    margin-right: 1em;
+}
 #file-list { margin-bottom: 1em;}
 #file-list tr {
     border-bottom: 1px dotted #ADD0DC;
